fixed scrollbar issues

--- a/src/pages/firstLogin/firstLogin.css
+++ b/src/pages/firstLogin/firstLogin.css
@@ -8,8 +8,13 @@
     scrollbar-width: thin;
 }
 
-.first-login ::-webkit-scrollbar {
+.first-login::-webkit-scrollbar {
     display: none;
+}
+
+.first-login {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .first-login-heading {
